Fix missing Map.of(...)
Signed-off-by: Peter Nied <petern@amazon.com>